--- a/elbert2/ch03_counter/src/counter_elbert2.ucf
+++ b/elbert2/ch03_counter/src/counter_elbert2.ucf
@@ -3,7 +3,7 @@
 # Left Push Switch (SW1) is Clock
 # LEDs D1 to D4 are outputs
 
-NET "Clock" LOC = "P80" | PULLUP | CLOCK_DEDICATED_ROUTE = TRUE;
+NET "Clock" LOC = "P80" | PULLUP | CLOCK_DEDICATED_ROUTE = FALSE;
 
 NET "QA"  LOC = "P55"; 
 NET "QB"  LOC = "P54"; 
